syntax = "proto3";

package dns;

import "common.proto";
import "google/protobuf/timestamp.proto";

message DnsResourceRecordLookupRequest {
  string qtype = 1;
  string qname = 2;
  string zone_id = 3;
  optional string local = 4;
  optional string remote = 5;
  optional string real_remote = 6;
}

message DnsResourceRecordLookupResponse {
  repeated DnsResourceRecord records = 1;
}

message DnsResourceRecord {
  string qname = 1;
  string qtype = 2;
  uint32 ttl = 3;
  string content = 4;
  optional string domain_id = 5;
  optional string scope_mask = 6;
  optional string auth = 7;
}

message Metadata {
  repeated string allow_axfr_from = 2;
}
message DomainMetadataRequest {
  string domain = 1;
}

message DomainMetadataResponse {
  Metadata result = 1;
}

message DomainList {
  repeated Domain domains = 1;
}

message GetAllDomainsRequest{
}

message GetAllDomainsResponse {
  repeated DomainInfo result = 1;
}

message GetAllRecordsForDomainRequest {
  string name = 1;
}

message GetAllRecordsForDomainResponse {
  repeated DnsResourceRecord result = 1;
}

message DomainInfo {
  common.DomainId id = 1;
  string zone = 2;
  string kind = 3;
  int32 serial = 4;
  optional int32 last_checked = 5;
  optional int32 notified_serial = 6;

}
message Domain {
  common.DomainId id = 1;
  string name = 2;
  google.protobuf.Timestamp created = 3;
  google.protobuf.Timestamp updated = 4;
  google.protobuf.Timestamp deleted = 5;
  Metadata metadata = 6;
  optional string soa = 7;
}

message CreateDomainRequest {
  string name = 1;
}

message UpdateDomainRequest {
  Domain domain = 1;
}

message DomainSearchQuery {
  optional common.DomainId id = 1;
  optional string name = 2; 
}

message DomainDeletionRequest {
  common.DomainId id = 1;
}

message DomainDeletionResult{
}


